# project-example

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  package.json  pnpm-lock.yaml
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/native-runtime/: README.md
app/src-tauri/src/: intelligence.rs  knowledge.rs  knowledge_contract.rs  lib.rs  main.rs  projects.rs  vector_index.rs  watch.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  metrics.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  chunk.rs  diagnostics.rs  embedding_runtime.rs  image_ocr.rs  intelligence.rs  intelligence_tests.rs  lib.rs  llm.rs  llm_cli.rs  pptx_preview.rs  probe.rs  proc.rs  tables.rs  viet_legacy.rs  viet_legacy_maps.rs
crates/core/src/conv/: csv_conv.rs  docx.rs  html.rs  mod.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
crates/core/tests/: office_golden_e2e.rs
crates/core/tests/snapshots/: gold_001_pdf.md
crates/knowledge/: Cargo.toml  README.md
crates/knowledge/examples/: external_rag_pilot.rs  p0_desktop_baseline.rs
crates/knowledge/fixtures/: identity-v1.json  legacy-hnsw-v1.json  legacy-sqlite-v1.sqlite  manifest.json
crates/knowledge/src/: ask.rs  citation.rs  desktop.rs  embedding.rs  error.rs  identity.rs  lib.rs  query.rs  rank.rs  types.rs
crates/knowledge/src/desktop/: hnsw.rs  mod.rs  service.rs  sqlite.rs
crates/knowledge/tests/: golden_hybrid.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: main.rs
crates/server/: Cargo.toml  Dockerfile.worker  README.md  worker.env.example
crates/server/migrations/: 0001_expand_orgs_users.sql  0002_expand_org_membership_rls.sql  0003_expand_auth_sessions_rbac.sql  0004_expand_collections.sql  0005_expand_documents_versions_artifacts.sql  0006_expand_chunks_claims.sql  0007_expand_conflicts_lifecycle.sql  0008_expand_jobs_outbox_events.sql  0009_expand_quota_audit_index.sql  0010_expand_tenant_rls.sql  0011_expand_poc_seed.sql  0012_expand_readiness_fence.sql  0012_index_generation_embedding_batches.sql  0013_expand_index_generation_rls.sql  0014_expand_vector_cleanup_intents.sql  0015_expand_vector_cleanup_intent_states.sql  0016_expand_chunks_accent_fold_tsv.sql  0017_expand_qa_history_permission.sql  0018_expand_download_capabilities.sql  0018_expand_download_capability_redemptions.sql  0019_expand_download_capability_clock.sql  0019_expand_ops_fences_jobs_system.sql  0020_expand_api_idempotency.sql  0020_expand_authz_epochs.sql  0020_expand_hash_semantics_readiness_ops.sql  0021_expand_audit_intent_outcome.sql  0021_expand_sse_stream_events.sql  0022_expand_lifecycle_refresh_job.sql  0022_expand_runtime_readiness.sql  0023_expand_audit_append_only.sql  0023_expand_upload_operations.sql  0024_expand_ask_stream_sessions.sql  0024_expand_runtime_readiness_zero_drift.sql  0025_backfill_event_log_ids_ask_stream_ops.sql  0026_expand_audit_append_only.sql  0027_expand_migrator_app_grants.sql  0028_expand_audit_ownership_migrator.sql  README.md  manifest.json
crates/server/openapi/: README.md  generate_openapi.py  openapi.yaml
crates/server/openapi/fixtures/: ask_response.json  error.json  job_response.json  pagination.json  rate_limited.json  search_response.json  sse.event-stream  sse.json
crates/server/src/: api.rs  config.rs  config_edge.rs  database.rs  error.rs  http.rs  lib.rs  main.rs  state.rs  telemetry.rs
crates/server/src/api/: error.rs  extract.rs  last_event_id.rs  mod.rs  openapi.rs  pagination.rs  sse.rs  types.rs
crates/server/src/auth/: context.rs  jwt.rs  middleware.rs  mod.rs  password.rs  permissions.rs  provider.rs  session.rs
crates/server/src/db/: acl.rs  api_idempotency.rs  ask_streams.rs  audit.rs  authz_epoch.rs  authz_lock.rs  chunks.rs  claims.rs  collections.rs  conflicts.rs  document_versions.rs  documents.rs  download_capabilities.rs  embedding_batches.rs  error.rs  index_metadata.rs  jobs.rs  mod.rs  models.rs  orgs.rs  pool.rs  quota.rs  readiness_fence.rs  search.rs  sse_streams.rs  upload_operations.rs  vector_cleanup_intents.rs
crates/server/src/jobs/: mod.rs
crates/server/src/middleware/: client_ip.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs  write_gate.rs
crates/server/src/routes/: ask.rs  auth.rs  collections.rs  common.rs  documents.rs  events.rs  health.rs  jobs.rs  metrics.rs  mod.rs  qa_common.rs  rate_limit_guard.rs  search.rs  uploads.rs
crates/server/src/services/: access.rs  acl.rs  acl_mutate.rs  artifacts.rs  audit.rs  authz_lock.rs  authz_mutation.rs  chunking.rs  citation.rs  claims.rs  conversion.rs  deletion.rs  document_state.rs  download.rs  embedding.rs  health.rs  index_signature.rs  indexing.rs  lifecycle.rs  mod.rs  ops_fence.rs  preview.rs  promotion.rs  quota.rs  readiness.rs  reconciliation.rs  stream_auth.rs
crates/server/src/storage/: blob.rs  error.rs  keys.rs  minio.rs  mod.rs  qdrant.rs  url_safety.rs
crates/server/src/telemetry/: config.rs  correlation.rs  exporter.rs  http.rs  init.rs  logging.rs  metrics.rs  mod.rs  redact.rs
crates/server/src/workers/: convert.rs  delete.rs  embedding.rs  index.rs  limits.rs  mod.rs  reconcile.rs  sandbox.rs
crates/server/tests/: api_http_contracts.rs  api_rest.rs  ask_grounding_matrix.rs  auth.rs  citation_authz_matrix.rs  citation_preview_download.rs  deletion_reconcile.rs  deploy_role.rs  e2e_release_suite.rs  e2e_suite.rs  index_worker.rs  jobs.rs  knowledge_consumer.rs  openapi_rate_health.rs  phase1b_api_contracts.rs  qa.rs  quota.rs  readiness.rs  readiness_force_rls.rs  repositories.rs  rest_api.rs  retrieval.rs  retrieval_vertical_slice.rs  schema_migrations.rs  search_ask_sse.rs  sse_api.rs  sse_stream_readiness.rs  storage.rs  telemetry.rs  telemetry_audit.rs  uploads.rs  worker.rs
crates/server/tests/common/: fixtures.rs  mod.rs
crates/server/tests/e2e/: README.md  harness.rs  manifest.json  scenarios.rs
(+921 files in other folders)
