[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "app/src-tauri", "crates/mcp"]
# vendor/markitdown-rs chỉ để THAM KHẢO (không build, không phụ thuộc).
exclude = ["vendor"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["anhnth24"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
infer = "0.16"
