[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "app/src-tauri", "crates/mcp"]
# vendor/markitdown-rs chỉ để THAM KHẢO (không build, không phụ thuộc).
exclude = ["vendor"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["anhnth24"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
infer = "0.16"

# Tauri dev otherwise runs the PDF/OCR pipeline completely unoptimized
# (measured ~17.5s vs <1s release on the 45-page CASAN PDF).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.fileconv-core]
opt-level = 2
