[package]
name = "fileconv-desktop"
version = "0.1.0"
description = "Markhand local-first document conversion and intelligence desktop app"
homepage = "https://github.com/anhnth24/project-example"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version = "1.88"

# Tauri 2: lib (mobile-ready) + bin desktop.
[lib]
name = "fileconv_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "markhand"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin có chủ đích: time 0.3.52 đổi chữ ký `Parsable::parse` làm vỡ `cookie 0.18.1`
# (dep gián tiếp của tauri/wry). Giữ 0.3.51 cho tới khi cookie phát hành bản tương thích.
time = "=0.3.51"

# Lõi convert dùng chung với CLI — KHÔNG viết lại.
fileconv-core = { path = "../../crates/core", features = ["llm", "audio"] }
fileconv-knowledge = { path = "../../crates/knowledge", features = ["desktop-hnsw", "desktop-sqlite"] }
notify = "8.2.0"
