[package]
name = "fileconv-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "fileconv"
path = "src/main.rs"

[features]
default = ["audio"]
# Whisper/audio bench path. POC worker images build with --no-default-features
# so whisper.cpp is not compiled and PhoWhisper cannot be bundled by accident.
audio = ["fileconv-core/audio"]

[dependencies]
fileconv-core = { path = "../core" }
anyhow.workspace = true
walkdir = "2"
serde_json = "1.0.150"
