[package]
name = "fileconv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Convert documents, images and audio to Markdown (Rust, viết lại từ đầu)"

[features]
default = []
# Tăng tốc whisper bằng GPU/BLAS — bật khi build trên máy có phần cứng tương ứng:
#   cargo build --release --features cuda     (NVIDIA)
#   cargo build --release --features metal    (macOS)
#   cargo build --release --features vulkan
#   cargo build --release --features openblas (CPU + OpenBLAS)
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]

[dependencies]
thiserror.workspace = true
# Gọi thẳng các crate gốc thay vì qua markitdown-rs:
calamine = "0.35"        # xlsx/xls — đọc TẤT CẢ sheet
docx-rust = "0.1.11"     # docx — có lấy style heading
pdf-extract = "=0.8.2"   # pdf (pin 0.8.2: bản 0.12 panic trên một số PDF mà 0.8.2 xử lý được)
quick-xml = "0.37"       # pptx (parse XML slide)
zip = "2.2"              # pptx (giải nén)
csv = "1.3"              # csv
htmd = "0.5"             # html -> markdown (thay html2md để tránh phình output)
whisper-rs = "0.16"      # audio -> text (whisper.cpp), hỗ trợ tiếng Việt
# (symphonia pin 0.5: API ổn định; 0.6 đổi cấu trúc module)
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "wav", "pcm", "ogg", "vorbis", "alac"] }  # decode audio thuần Rust
