[package]
name = "fileconv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Convert documents, images and audio to Markdown (Rust, viết lại từ đầu)"

[features]
default = []
# Tăng tốc whisper bằng GPU/BLAS — bật khi build trên máy có phần cứng tương ứng:
#   cargo build --release --features cuda     (NVIDIA)
#   cargo build --release --features metal    (macOS)
#   cargo build --release --features vulkan
#   cargo build --release --features openblas (CPU + OpenBLAS)
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]
# Lớp LLM tuỳ chọn (summarize / extract_json ngữ nghĩa) — cần API key lúc chạy.
# Bật khi build: cargo build --features llm. Mặc định TẮT để giữ build lean/offline.
llm = ["dep:reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
thiserror.workspace = true
# Gọi thẳng các crate gốc thay vì qua markitdown-rs:
calamine = "0.35"        # xlsx/xls — đọc TẤT CẢ sheet
docx-rust = "0.1.11"     # docx — có lấy style heading
pdf-extract = "=0.8.2"   # pdf (pin 0.8.2: bản 0.12 panic trên một số PDF mà 0.8.2 xử lý được)
quick-xml = "0.37"       # pptx (parse XML slide)
zip = "2.2"              # pptx (giải nén)
csv = "1.3"              # csv
htmd = "0.5"             # html -> markdown (thay html2md để tránh phình output)
whisper-rs = "0.16"      # audio -> text (whisper.cpp), hỗ trợ tiếng Việt
# (symphonia pin 0.5: API ổn định; 0.6 đổi cấu trúc module)
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "wav", "pcm", "ogg", "vorbis", "alac"] }  # decode audio thuần Rust
pdfium-render = "0.9.2"
# Đọc/giải mã nhiều định dạng ảnh để tiền xử lý trước khi OCR (không chỉ PNG).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff"] }
pdf-inspector = "0.1.3"
unicode-normalization = "0.1.25"
