[package]
name = "fileconv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Convert documents, images and audio to Markdown (Rust, viết lại từ đầu)"

[features]
default = []
# Tăng tốc whisper bằng GPU/BLAS — bật khi build trên máy có phần cứng tương ứng:
#   cargo build --release --features cuda     (NVIDIA)
#   cargo build --release --features metal    (macOS)
#   cargo build --release --features vulkan
#   cargo build --release --features openblas (CPU + OpenBLAS)
# Audio → text (whisper.cpp qua whisper-rs + decode symphonia). TẮT mặc định vì
# whisper.cpp phải compile C++ qua cmake (~1-2 phút) — chỉ cli/desktop cần; server
# và knowledge dùng lõi text-only nên không gánh chi phí này.
audio = ["dep:whisper-rs", "dep:symphonia", "dep:rubato"]
cuda = ["audio", "whisper-rs/cuda"]
metal = ["audio", "whisper-rs/metal"]
vulkan = ["audio", "whisper-rs/vulkan"]
hipblas = ["audio", "whisper-rs/hipblas"]
openblas = ["audio", "whisper-rs/openblas"]
openmp = ["audio", "whisper-rs/openmp"]
# Lớp LLM tuỳ chọn (summarize / extract_json ngữ nghĩa) — cần API key lúc chạy.
# Bật khi build: cargo build --features llm. Mặc định TẮT để giữ build lean/offline.
llm = ["dep:reqwest", "dep:httpdate"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
httpdate = { version = "1.0.3", optional = true }
thiserror.workspace = true
# Gọi thẳng các crate gốc thay vì qua markitdown-rs:
calamine = "0.35"        # xlsx/xls — đọc TẤT CẢ sheet
docx-rust = "0.1.11"     # docx — có lấy style heading
pdf-extract = "=0.8.2"   # pdf (pin 0.8.2: bản 0.12 panic trên một số PDF mà 0.8.2 xử lý được)
quick-xml = "0.37"       # pptx (parse XML slide)
zip = "2.2"              # pptx (giải nén)
csv = "1.3"              # csv
htmd = "0.5"             # html -> markdown (thay html2md để tránh phình output)
whisper-rs = { version = "0.16", optional = true }      # audio -> text (whisper.cpp), hỗ trợ tiếng Việt; sau feature `audio`
# (symphonia pin 0.5: API ổn định; 0.6 đổi cấu trúc module)
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "wav", "pcm", "ogg", "vorbis", "alac"], optional = true }  # decode audio thuần Rust; sau feature `audio`
# Offline fixed-ratio resample (FFT / windowed-sinc anti-alias) → 16 kHz for Whisper.
rubato = { version = "4.0.0", optional = true }
pdfium-render = "0.9.2"
# Đọc/giải mã nhiều định dạng ảnh để tiền xử lý trước khi OCR (không chỉ PNG).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff"] }
# Temp file OCR: tạo exclusive (O_EXCL) thay vì tên đoán được trong /tmp.
tempfile = "3.27.0"
pdf-inspector = "0.1.3"
unicode-normalization = "0.1.25"
base64 = "0.22"
encoding_rs = "0.8"
# Durable intelligence IDs (CORE-T9): length-delimited SHA-256, workspace-pinned.
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
