[package]
name = "fileconv-knowledge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure knowledge retrieval, grounding and citation contracts for Markhand"

[features]
default = []
desktop-sqlite = ["dep:rusqlite"]
desktop-hnsw = ["dep:fs2", "dep:hnsw_rs", "dep:serde_json"]
external-rag-pilot = [
    "desktop-sqlite",
    "desktop-hnsw",
    "fileconv-core/llm",
    "dep:serde_json",
]

[dependencies]
fileconv-core = { path = "../core" }
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"], default-features = false, optional = true }
hnsw_rs = { version = "0.3.4", optional = true }
sha2 = "0.11.0"
url = "2.5.8"
siphasher = "1.0.3"
serde_json = { version = "1", optional = true }
fs2 = { version = "0.4.3", optional = true }

[dev-dependencies]
serde_json = "1"

[[example]]
name = "p0_desktop_baseline"
required-features = ["desktop-sqlite", "desktop-hnsw"]

[[example]]
name = "external_rag_pilot"
required-features = ["external-rag-pilot"]
