[package]
name = "fileconv-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "fileconv-mcp"
path = "src/main.rs"

[dependencies]
fileconv-core = { path = "../core" }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
