[package]
name = "fileconv-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Markhand Web server and worker skeleton"
default-run = "fileconv-server"

[lib]
name = "fileconv_server"

[[bin]]
name = "fileconv-server"
path = "src/main.rs"

[[bin]]
name = "fileconv-worker"
path = "src/bin/worker.rs"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
fileconv-core = { path = "../core" }
fileconv-knowledge = { path = "../knowledge" }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rustls = "0.23.42"
rustls-native-certs = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
thiserror.workspace = true
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = "0.7.18"
tokio-postgres-rustls = "0.14.0"
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
