[package]
name = "fileconv-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Markhand Web server and worker skeleton"
default-run = "fileconv-server"

[lib]
name = "fileconv_server"

[[bin]]
name = "fileconv-server"
path = "src/main.rs"

[[bin]]
name = "fileconv-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "dev-hash-password"
path = "src/bin/dev-hash-password.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["json", "multipart"] }
base64 = "0.22.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde", "clock"] }
crc32fast = "1.5.0"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
fileconv-core = { path = "../core" }
fileconv-knowledge = { path = "../knowledge" }
futures = "0.3.33"
hex = "0.4.3"
http-body = "1.0.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp", "webp", "tiff"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
libc = "0.2.186"
quick-xml = "0.41.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls"] }
rust_decimal = { version = "1.42.1", features = ["serde", "db-tokio-postgres"] }
rustls = "0.23.42"
rustls-native-certs = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "wav", "pcm", "ogg", "vorbis", "alac"] }
tempfile = "3.27.0"
thiserror.workspace = true
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-postgres-rustls = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.24.0", features = ["serde", "v4", "v8"] }
zip = "2.2"

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
